# rust-antlr-case-insensitive-keywords

./: .gitignore  Cargo.toml  Query.g4  build.rs  generate-parser.sh
src/: ast.rs  lib.rs  main.rs
