[package]
name = "rust-antlr-case-insensitive-keywords"
version = "0.1.0"
authors = ["Jörn Horstmann <git@jhorstmann.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
antlr-rust = { git = "https://github.com/rrevenantt/antlr4rust.git", rev = "20491fc2ffc03e7f8e631dcfa542c097ec41dbef" }